feat(product): add product image upload
